# invest-log

./: .gitignore  AGENTS.md  BUGFIX_REPORT.md  BUILD_README.md  CLAUDE.md  README.md  TODO.md  app.py  capacitor.config 2.json  capacitor.config.json  config.py  database.py  design.md  invest-log-backend.spec  logger_config.py  mrd.md  package-lock.json  package.json  prd.md  price_fetcher.py  requirements-dev.txt  requirements.txt  start.sh
.githooks/: pre-commit
docs/: mrd.md  prd.md
docs/prds/: charts-currency-pie-redesign-v1.0-prd.md  charts-currency-pie-redesign-v1.0-tech-spec.md
docs/specs/: design-ai-holdings-analysis.md  mrd-ai-holdings-analysis.md  price_fetcher.md  qa-ai-holdings-analysis.md  refactor-suggestion-by-gemini.md  summary-ai-holdings-analysis.md
electron/: loading.html  main.js
go-backend/: README.md  go.mod  go.sum
internal/db/: transactions.go
internal/handlers/: handlers.go
macos/: AppIcon.icns  build_dmg.sh  check_dmg_layout.sh  loading.html  main.swift
routers/: api.py  holdings.py  overview.py  settings.py  setup.py  transactions.py  utils.py
scripts/: afterPack.js  build.sh  install_git_hooks.sh  repair_asset_types.py  sync_spa.ps1  sync_spa.sh  task_context.sh
skills/intent-driven-delivery/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
static/: app.js  index.html  manifest.json  style.css  sw.js
static/modules/: ai-analysis.js  (+8 more)
templates/: add.html  base.html  charts.html  holdings.html  index.html  settings.html  setup.html  symbol.html  transactions.html
(+339 files in other folders)
